fix: corrections sécurité, perf et robustesse
Sécurité critique
- Cookie refresh : secure flag depuis env USE_SECURE_COOKIE (false en
  dev, true en prod HTTPS) — plus de secure(false) hardcodé
- JWT access token stocké en mémoire (tokenStore.js) au lieu de
  localStorage — XSS ne peut plus voler le token
- initAuth() au démarrage : restaure la session depuis le cookie
  httpOnly sans toucher localStorage
- CORS origins depuis env CORS_ALLOWED_ORIGINS — plus de localhost
  hardcodé dans le code Java
- Message login : suppression du e.getMessage() qui fuitait les
  détails internes

Sécurité moyenne
- Intercepteur axios : gestion du 403 (rôle révoqué) → clearSession
- JwtFilter : log.warn() sur token invalide avec IP et type d'erreur

Performance
- N+1 réactions corrigé : findDetailedByMessageIdMessageIn() batch
  en une seule requête pour toute la page de messages
- Export plafonné à 10 000 messages pour éviter OutOfMemory

Robustesse / UX
- Taille message limitée à 10 000 caractères côté serveur
- fetchMessages() retourne null (erreur) vs [] (vide) — l'UI peut
  distinguer les deux états
- Suppression des appels loadFromStorage() redondants dans le guard
  routeur et App.vue (initAuth() gère tout avant le mount)

52 tests (23 backend + 29 frontend) : tous verts

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>